<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="8dp"
        android:gravity="center_horizontal"
        app:cardBackgroundColor="@color/blue"
        app:cardCornerRadius="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/dealName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:letterSpacing=".10"
                android:padding="5dp"
                android:paddingStart="15dp"
                android:text="@string/deal_name"
                android:textColor="@color/white"
                android:textSize="22sp "
                app:fontFamily="@font/roboto_regular" />

            <TextView
                android:id="@+id/dealTime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:letterSpacing=".10"
                android:padding="5dp"
                android:paddingStart="15dp"
                android:text="@string/dealTime"
                android:textColor="@color/white"
                android:textSize="12sp"
                app:fontFamily="@font/roboto_regular" />

            <TextView
                android:id="@+id/dealDesc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:letterSpacing=".10"
                android:padding="5dp"
                android:paddingStart="15dp"
                android:text="@string/dealdesc"
                android:textColor="@color/white"
                android:textSize="16sp"
                app:fontFamily="@font/roboto_regular" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>